--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -3,3 +3,4 @@ org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss:SSSZ
 org.slf4j.simpleLogger.defaultLogLevel=info
 org.slf4j.simpleLogger.log.io.vertx.ext.web.RoutingContext=off
 org.slf4j.simpleLogger.log.org.apache.curator.framework.imps.CuratorFrameworkImpl=off
+org.slf4j.simpleLogger.log.org.apache.curator.framework.imps.EnsembleTracker=off
