--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
+computate-smart-website-builder
+computate-smart-cloud-deployer
 target/**
+computate-smart-website-builder
+computate-smart-cloud-deployer
 .flattened-pom.xml
 .vscode
+*.code-workspace
 bin/generate.sh
 bin/generateonce.sh
 bin/index.sh
 bin/indexonce.sh
 bin/watch.sh
 bin/watchnow.sh
-doc/getting-started/openshift-local/tls*
 *.code-workspace
-
