--- a/kustomize/overlays/moc/roles/deploy-workbenches/templates/userSettings.json
+++ b/kustomize/overlays/moc/roles/deploy-workbenches/templates/userSettings.json
@@ -8,4 +8,7 @@
   , "editor.renderWhitespace": "all"
   , "terminal.integrated.scrollback": 10000
   , "files.autoSave": "off"
+  , "search.exclude": {
+    "**/.local/share/**": true
+  }
 }
