Fixing the static dir for developer courses

--- a/openshift-local/base/deployments/aitelemetry/deployment.yaml
+++ b/openshift-local/base/deployments/aitelemetry/deployment.yaml
@@ -42,7 +42,7 @@ spec:
           imagePullPolicy: Always
           volumeMounts:
             - name: "ai-telemetry-developer"
-              mountPath: "/home/default/computate.org-static/webawesome/templates/en-us/ai-telemetry-developer"
+              mountPath: "/home/default/ai-telemetry-static/webawesome/templates/en-us/ai-telemetry-developer"
           terminationMessagePolicy: File
           envFrom:
             - secretRef:
@@ -50,7 +50,7 @@ spec:
           image: docker.io/alpine/git
           args:
             - >-
-              git clone https://computate.org:$GITHUB_DEVELOPERS_TOKEN@github.com/computate-org/ai-telemetry-developer.git /home/default/computate.org-static/webawesome/templates/en-us/ai-telemetry-developer; 
+              git clone https://computate.org:$GITHUB_DEVELOPERS_TOKEN@github.com/computate-org/ai-telemetry-developer.git /home/default/ai-telemetry-static/webawesome/templates/en-us/ai-telemetry-developer; 
       containers:
       - name: aitelemetry
         env:
@@ -118,9 +118,9 @@ spec:
             cpu: 750m
             ephemeral-storage: 1Gi
             memory: 768Mi
-          volumeMounts:
-            - name: "ai-telemetry-developer"
-              mountPath: "/home/default/computate.org-static/webawesome/templates/en-us/ai-telemetry-developer"
+        volumeMounts:
+          - name: "ai-telemetry-developer"
+            mountPath: "/home/default/ai-telemetry-static/webawesome/templates/en-us/ai-telemetry-developer"
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
