--- a/openshift-local/prom-keycloak-proxy/overlays/local-cluster/kustomization.yaml
+++ b/openshift-local/prom-keycloak-proxy/overlays/local-cluster/kustomization.yaml
@@ -35,7 +35,7 @@ patches:
             - name: prom-keycloak-proxy
               env:
                 - name: PROXY_ACM_HUB
-                  value: local-cluster
+                  value: openshift-local
               envFrom:
                 - secretRef:
                     name: cloud-auth
