Upgrading prom-keycloak-proxy deployment to 2.4.0

--- a/openshift-local/prom-keycloak-proxy/base/deployments/prom-keycloak-proxy/deployment.yaml
+++ b/openshift-local/prom-keycloak-proxy/base/deployments/prom-keycloak-proxy/deployment.yaml
@@ -44,8 +44,7 @@ spec:
               value: PROJECT
             - name: OPENSHIFT_LOCAL
               value: 'true'
-          #image: quay.io/nerc-images/prom-keycloak-proxy:2.2.0
-          image: quay.io/computate/prom-keycloak-proxy:openshift-local-support
+          image: quay.io/nerc-images/prom-keycloak-proxy:2.4.0
           imagePullPolicy: Always
           livenessProbe:
             exec:
