Adding new TENANTS var to deploy-workbench automation

--- a/kustomize/overlays/moc/roles/deploy-workbenches/templates/configmap.yaml
+++ b/kustomize/overlays/moc/roles/deploy-workbenches/templates/configmap.yaml
@@ -44,6 +44,15 @@ data:
   ESI_API_SSL: "{{ ESI_API_SSL | string | lower }}"
   ESI_API_PORT: "{{ ESI_API_PORT }}"
 
+  TENANTS: >-
+    { 
+    "nairr": { 
+      "tenantName": "NAIRR"
+      , "description": "National Science Foundation’s National AI Research Resource (NAIRR) Deep Partnership Program "
+      , "hubId": "moc"
+      , "clusterName": "nerc-ocp-prod" 
+    } 
+    }
   HUBS: >-
     { 
     "moc": { 
